<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:strokeColor="@color/red"
    app:strokeWidth="2dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="6dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvItemBilling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat_number_template"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemBillingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_time_template"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemBilling" />

        <TextView
            android:id="@+id/tvItemBillingSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_sum_template"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemBillingTime" />

        <TextView
            android:id="@+id/tvItemBillingService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:maxLines="1"
            android:text="@string/billing_service_template"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemBillingSum" />

        <TextView
            android:id="@+id/tvItemBillingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billing_id_template"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemBillingService" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
